--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -83,7 +83,7 @@
                     <td>transaction hash</td>
                     <td>fee [&#181;&#x271]</td>
                     <td>outputs</td>
-                    <td>in/out/pID</td>
+                    <td>in/out</td>
                     <td>tx size [kB]</td>
                 </tr>
                 {{#txs}}
@@ -94,7 +94,7 @@
                     <td><a href="/tx/{{hash}}">{{hash}}</a></td>
                     <td>{{fee_micro}}</td>
                     <td>{{sum_outputs_short}}</td>
-                    <td>{{no_inputs}}/{{no_outputs}}/{{pID}}</td>
+                    <td>{{no_inputs}}/{{no_outputs}}</td>
                     <td>{{tx_size_short}}</td>
                 </tr>
                 {{/txs}}
