--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -10,7 +10,6 @@
 
     {{#has_payment_id}}
         <H5 style="margin:5px">Payment id: <span id="payment_id">{{payment_id}}</span></H5>
-        <H5 style="margin:5px">Payment id as ascii: {{payment_id_as_ascii}}</H5>
     {{/has_payment_id}}
 
     {{#has_payment_id8}}
@@ -107,7 +106,7 @@
                     <h4 style="margin: 0px">Prove to someone that you have sent them Dinastycoin in this transaction</h4>
                     <h5 style="margin: 0px">
                         Tx private key can be obtained using <i>get_tx_key</i>
-                        command in  <i>dinastycoin-wallet-cli</i> command line tool
+                        command in  <i>dinasty-wallet-cli</i> command line tool
                         <br/>
                         Note: address/subaddress and tx private key are sent to the server, as the calculations are done on the server side
                     </h5>
